dist/1.0/bin/sample/retrieveUnpackaged/objects/IntegrationComments__c.object
<CustomObject>
    <description>Object responsible for storing copies of comments which needs to be integrated with OCTT (standard Case Comment object can not be extended)</description>
    <fields>
        <fullName>AttachmToAdd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AttachmToAdd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Id__c</fullName>
        <description>Related Case, below which comment has been added. Text field with Case identifier, used in scenario when source case record has been deleted (therefore relationship field can not be used)</description>
        <inlineHelpText>Related Case, below which comment has been added</inlineHelpText>
        <label>Case Comment Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Related Case, below which comment has been added</description>
        <inlineHelpText>Related Case, below which comment has been added</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Comments Integration</relationshipLabel>
        <relationshipName>Case_Comments_Integration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment_Content__c</fullName>
        <label>Comment Content</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmMesId__c</fullName>
        <label>EmMesId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Synch_Attempt__c</fullName>
        <description>Date, when comments has been send to synchronization last time</description>
        <inlineHelpText>Date, when comments has been send to synchronization last time</inlineHelpText>
        <label>Last Synch Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Synchronization_Log__c</fullName>
        <description>Contain Integration error logs</description>
        <inlineHelpText>Contain Integration error logs</inlineHelpText>
        <label>Synchronization Log</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Synchronization_in_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When marked, means that comment has been send to OCTT, but response has not been recieved yet</description>
        <inlineHelpText>When marked, means that comment has been send to OCTT, but response has not been recieved yet</inlineHelpText>
        <label>Synchronization in Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPublic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies, whether the case comments may be presented to the customer</description>
        <inlineHelpText>Specifies, whether the case comments may be presented to the customer</inlineHelpText>
        <label>isPublic</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Comment Integration</label>
    <nameField>
        <displayFormat>CCI{000000000}</displayFormat>
        <label>Case Comment Integration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Comments Integration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>